# reachy-mini-hermes

./: .gitignore  CHANGELOG.md  OPERATIONS.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  index.html  plan.md  pyproject.toml  style.css
ci/: github-actions.yml.example
companion/: README.md  hermes-reachy-bridge.service.example  hermes_reachy_bridge.py  reachy_agent_actions.py  reachy_agent_broker.py  reachy_agent_runs.py
docs/: IMAGE_CREDITS.md  lite-raspberry-pi-4.md  public-image-shot-list.md
docs/plans/: 2026-07-19-agent-mode-roadmap.md  2026-07-23-agent-06-proactive-presence.md
reachy_mini_hermes/: __init__.py  agent_approvals.py  agent_audit.py  agent_policy.py  audio.py  bluetooth.py  config.py  contextual_offers.py  controller_features.py  gesture_detection.py  hermes_client.py  home_assistant.py  initiative.py  ispy.py  kids_mode.py  main.py  motion.py  presence.py  presentation.py  realtime_client.py  robot_tools.py  runtime.py  wakeword.py
reachy_mini_hermes/assets/: THIRD_PARTY_MODELS.md  keywords.txt
reachy_mini_hermes/static/: camera.js  index.html  main.js  manifest.webmanifest  service-worker.js  style.css
tests/: conftest.py  test_agent_actions.py  test_agent_approvals.py  test_agent_broker.py  test_agent_policy.py  test_agent_routes.py  test_agent_runs.py  test_announcements.py  test_audio.py  test_bluetooth.py  test_bluetooth_routes.py  test_bridge.py  test_camera_joystick.py  test_camera_ui.py  test_config.py  test_contextual_offer_routes.py  test_contextual_offers.py  test_controller_features.py  test_gate_1r_3_realtime_lifecycle.py  test_gate_1r_4_kids_privacy_read_only.py  test_gesture_detection.py  test_hermes_client.py  test_home_assistant_bridge.py  test_initiative.py  test_kids_bridge.py  test_kids_mode.py  test_kids_routes.py  test_motion.py  test_motor_ui.py  test_presence.py  test_presence_runtime.py  test_presentation.py  test_presentation_routes.py  test_presentation_runtime.py  test_public_experience.py  test_pwa.py  test_realtime_client.py  test_robot_tools.py  test_runtime_power.py  test_voice_session_lifecycle.py  (+1 more)
