[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy_mini_hermes"
version = "0.3.0"
description = "Extensible Reachy Mini companion app with local controls and optional Hermes Agent integration"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "THIRD_PARTY_NOTICES.md"]
authors = [{ name = "Tim Verhoogt and contributors" }]
dependencies = [
    "aioesphomeapi>=45.6,<46",
    "evdev==1.9.3",
    "httpx>=0.28,<1",
    "mutagen>=1.47,<2",
    "numpy>=1.26",
    "onnxruntime>=1.20,<2",
    "opencv-python>=4.11,<6",
    "Pillow>=10,<13",
    "reachy-mini>=1.9.0",
    "sherpa-onnx>=1.13.4,<2",
    "websockets>=15,<17",
]
keywords = ["reachy-mini-app", "hermes-agent", "voice-assistant", "robotics", "kids-mode"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Timbo89/reachy_mini_hermes"
Documentation = "https://hermes-agent.nousresearch.com/docs/user-guide/features/api-server"
Repository = "https://github.com/Timverhoogt/reachy-mini-hermes"
"Standalone I Spy" = "https://github.com/Timverhoogt/reachy-mini-i-spy"

[project.scripts]
reachy-mini-hermes = "reachy_mini_hermes.main:run_cli"

[project.entry-points."reachy_mini_apps"]
reachy_mini_hermes = "reachy_mini_hermes.main:ReachyMiniHermes"

[dependency-groups]
dev = [
    "build>=1.2",
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.9",
]

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["reachy_mini_hermes*"]

[tool.setuptools.package-data]
reachy_mini_hermes = ["assets/*", "assets/gesture_models/*", "static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings --maxfail=1"

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
